[gd_scene load_steps=7 format=3 uid="uid://cmi47qyp3ruvw"]

[ext_resource type="Theme" uid="uid://6hdp0kr0obht" path="res://Themes/BodyTheme.tres" id="1_y3vi2"]
[ext_resource type="PackedScene" uid="uid://cum2h2tgqmh77" path="res://Scenes/Panels/SettingPanel.tscn" id="2_1akho"]
[ext_resource type="Theme" uid="uid://brtq38ympa1w8" path="res://Themes/SmallHeaderTheme.tres" id="2_jcykm"]
[ext_resource type="PackedScene" uid="uid://chjl1ir0gaxja" path="res://Scenes/Panels/boolean_setting_panel.tscn" id="3_1th0d"]
[ext_resource type="PackedScene" uid="uid://cv0hgs3xttog6" path="res://Scenes/doug_Setup.tscn" id="5_26pqj"]
[ext_resource type="Script" path="res://Scenes/techdebt.gd" id="5_85bhl"]

[node name="ContentContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="NameSection" type="Panel" parent="."]
self_modulate = Color(0.427493, 0.427493, 0.427493, 1)
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("1_y3vi2")

[node name="Label" type="Label" parent="NameSection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("2_jcykm")
text = "About You
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="name" parent="." instance=ExtResource("2_1akho")]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
mouse_filter = 1
label_text = "Name"
placeholder_text = "Enter Your Name!"
display_subtext = false
display_error_text = false
invalid_text = "Name cannot be blank"
required_use = true
regex_key = 2
regex_invalid_message = "Field must contain only letters."

[node name="location" parent="." instance=ExtResource("2_1akho")]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
mouse_filter = 1
label_text = "Location"
placeholder_text = "City, State"
display_subtext = false
display_error_text = false
required_use = true

[node name="gender" parent="." instance=ExtResource("3_1th0d")]
layout_mode = 2
label_text = "What is your gender?"
property = 3

[node name="pronouns" parent="." instance=ExtResource("2_1akho")]
custom_minimum_size = Vector2(0, 128)
layout_mode = 2
mouse_filter = 1
label_text = "What are your prefered pronouns?"
placeholder_text = "Leave blank for no preference."
display_subtext = false
display_error_text = false
invalid_text = "Name cannot be blank"
regex_invalid_message = "Field must contain only letters."

[node name="smoker" parent="." instance=ExtResource("3_1th0d")]
layout_mode = 2
mouse_filter = 1
label_text = "Do you Smoke?"
property = 1

[node name="DogSection" type="Panel" parent="."]
self_modulate = Color(0.427493, 0.427493, 0.427493, 1)
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("1_y3vi2")

[node name="Label" type="Label" parent="DogSection"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("2_jcykm")
text = "About Your Dogs
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Dougs" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 20
script = ExtResource("5_85bhl")
doug_field = ExtResource("5_26pqj")

[node name="Doug" parent="Dougs" instance=ExtResource("5_26pqj")]
layout_mode = 2

[node name="AddRemoveDougs" type="HBoxContainer" parent="Dougs"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 48)
layout_mode = 2

[node name="Padding" type="Control" parent="Dougs/AddRemoveDougs"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Add" type="Button" parent="Dougs/AddRemoveDougs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Add Dog"

[node name="Remove" type="Button" parent="Dougs/AddRemoveDougs"]
layout_mode = 2
size_flags_horizontal = 3
text = "Remove Dog"

[node name="Padding2" type="Control" parent="Dougs/AddRemoveDougs"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Preferences" type="Panel" parent="."]
self_modulate = Color(0.427493, 0.427493, 0.427493, 1)
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("1_y3vi2")

[node name="Label" type="Label" parent="Preferences"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("2_jcykm")
text = "People Preferences"
horizontal_alignment = 1
vertical_alignment = 1

[node name="gender_preference" parent="." instance=ExtResource("3_1th0d")]
layout_mode = 2
label_text = "What genders are you comfortable meeting with?"
property = 4

[node name="smoker_preference" parent="." instance=ExtResource("3_1th0d")]
layout_mode = 2
mouse_filter = 1
label_text = "Are you willing to meet smokers?"
property = 1

[node name="DogPreferences" type="Panel" parent="."]
self_modulate = Color(0.427493, 0.427493, 0.427493, 1)
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
mouse_filter = 1
theme = ExtResource("1_y3vi2")

[node name="Label" type="Label" parent="DogPreferences"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("2_jcykm")
text = "Dog Preferences"
horizontal_alignment = 1
vertical_alignment = 1

[node name="size_preference" parent="." instance=ExtResource("3_1th0d")]
layout_mode = 2
label_text = "What size are you looking for?"
property = 8

[node name="activity_preference" parent="." instance=ExtResource("3_1th0d")]
layout_mode = 2
label_text = "What activity level are you looking for?"
property = 6

[node name="neutered_preference" parent="." instance=ExtResource("3_1th0d")]
layout_mode = 2
label_text = "Do you want the other dogs to be neutered?"
property = 2

[node name="vaccinated_preference" parent="." instance=ExtResource("3_1th0d")]
layout_mode = 2
label_text = "Do you want the other dogs to be vaccinated?"

[connection signal="pressed" from="Dougs/AddRemoveDougs/Add" to="Dougs" method="_add_doug"]
[connection signal="pressed" from="Dougs/AddRemoveDougs/Remove" to="Dougs" method="_remove_doug"]
